--- a/docassemble/SustCoReportBAS/data/questions/survey_variables.yml
+++ b/docassemble/SustCoReportBAS/data/questions/survey_variables.yml
@@ -1,4 +1,3 @@
-
 ---
 #! designed survey scales
 mandatory: True
@@ -17,9 +16,9 @@ code: |
   turnaround_dropdown = OrderedDict([ ('Mindre än 1 miljon SEK', 'Mindre än 1 miljon SEK'), ('1-3 miljoner SEK', '1-3 miljoner SEK'), ('3-5 miljoner SEK', '3-5 miljoner SEK'), ('5-10 miljoner SEK', '5-10 miljoner SEK'), ('10-50 miljoner miljoner SEK', '10-50 miljoner miljoner SEK'), ('50-100 SEK', '50-100 SEK'), ('Mer än 100 miljoner SEK', 'Mer än 100 miljoner SEK') ])
 
 
-  scr_importance_likert = OrderedDict([ (1,'5 - Mycket viktig'), (0.75, '4 - Ganska viktig'), (0.5, '3 - Varken eller'), (0.25,'2 - Ganska oviktig'), (0,'1 - Mycket oviktig'), ])
+  scr_importance_likert = OrderedDict([ (1,'5 - Mycket viktig'), (0.75, '4 - Viss positiv påverkan'), (0.5, '3 - Varken eller'), (0.25,'2 - Ganska oviktig'), (0,'1 - Mycket oviktig'), ])
 
-  scr_significance_likert = OrderedDict([ (1,'5 - Mycket betydande'), (0.75, '4 - Betydande'), (0.5, '3 - Ganska betydande'), (0.25,'2 – Inte särskilt betydande'), (0,'1 - Inte alls betydande'), ])
+  scr_significance_likert = OrderedDict([ (1,'5 - Avsevärd positiv påverkan'), (0.75, '4 - Viss positiv påverkan'), (0.5, '3 - Ingen direkt påverkan'), (0.25,'2 – Viss negativ påverkan'), (0,'1 - Avsevärd negativ påverkan'), ])
 
   scr_application_likert = OrderedDict([ (1,'5 - Mycket stor utsträckning'), (0.75,'4 - Stor utsträckning'), (0.5, '3 - Viss  utsträckning'), (0.25, '2 - Liten utsträckning'), (0, '1 - Ingen tillämpning'), ])
 
