--- a/docassemble/SustCoReportBAS/data/questions/init_free.yml
+++ b/docassemble/SustCoReportBAS/data/questions/init_free.yml
@@ -17,7 +17,7 @@ subquestion: |
 
   [FILE sds_logo, 100%]
 
-  Välkommen till *SustCoReport BAS* - ett webbaserat verktyg där organisationer och företag kan utföra en initial analys för att komma igång med sitt hållbarhetsarbete.
+  Välkommen till *SustCoReport* - ett webbaserat verktyg där organisationer och företag kan utföra en initial analys för att komma igång med sitt hållbarhetsarbete.
 
   Det tar uppskattningsvis 15-20 minuter att svara på frågorna vilket generera en unik rapport för er verksamhet. 
    
@@ -99,7 +99,7 @@ section: Principerna
 #decoration: sds_favicon
 question: |
   ISO 26000: de 7 principerna
-#* Genom att fråga om uppskattning betydelse/vikten och grad av principerna samt deras tillämpning får vi en uppskattning kring hur de svarande ser på de olika principerna och hur de själva anser att de implementerar principerna. Fråga 3 behandlar de svarandes syn på deras bransch och framtid betydelse, och den sista frågan ger en griv perceptionsbaserad uppskattning på organisations egna intressenters perspektiv. 
+#* Genom att fråga om uppskattning betydelse/vikten och grad av principerna samt deras tillämpning får vi en uppskattning kring hur de svarande ser på de olika principerna och hur de själva anser att de implementerar principerna. Fråga 3 behandlar de svarandes syn på deras bransch och framtid betydelse, och den sista frågan ger en griv perceptionsbaserad uppskattning på organisations egna intressenters perspektiv.
 subquestion: |
   Beskriv hur er organisation förhåller sig till de 7 principerna genom att ge svar på nedanstående frågor:<br><br>
   1) Hur **viktig** är principen för **er verksamhet**?<br><br>
@@ -107,7 +107,7 @@ subquestion: |
   3) Hur **viktig** är principen för **er bransch om 10 år**?<br><br>
   4) Hur **viktig** tror du att principen är för **era intressenter**?<br><br>
 
-  *Notera att du kan få fram exempel på de olika principerna genom att placera markkören på respektive princip nedan*<br><br>
+  *Notera att du kan få fram exempel på de olika principerna genom att placera markkören på respektive princip nedan*<br><br> 
 
 fields:
   - note: <hr> ## styling is done with css - see separate file. 
@@ -688,7 +688,7 @@ code: |
         "Intressenternas<br>intressen",
         "Rättsstatens<br>principer",
         "Internationella<br>uppförandenormer",
-        "mänskliga<br>rättigheter",
+        "Mänskliga<br>rättigheter",
     ]
   
   radar_1_t1_name = "Viktigt för verksamhet"
@@ -931,15 +931,15 @@ code: |
 mandatory: True
 section: Rapport
 #decoration: sds_favicon
-question: Här är SustCoReports BAS för ${df.Organisation[0]}
+question: Här är SustCoReport för ${df.Organisation[0]}
 
 attachments:
-  - name: SustCoReport BAS
+  - name: SustCoReport
     filename: sustcoreport_bas_${df.Organisation[0]}
     docx template file: ra_temp.docx
     valid formats:
       - pdf
-      - docx
+#      - docx
 
 buttons:
   - Fortsätt: continue
