--- a/docassemble/SustCoReportBAS/data/questions/survey_variables.yml
+++ b/docassemble/SustCoReportBAS/data/questions/survey_variables.yml
@@ -41,7 +41,7 @@ columns:
   - Region: row_item.region
   - Anställda: row_item.employee
   - Omsättning: row_item.turnaround
-  - Verksamhetsinriktning: str(row_item.op_focus.true_values()).replace(", and ", ", och ")
+  - Verksamhetsinriktning: str(row_item.op_focus.true_values()).replace(" and ", " och ")
   - Verksamhetsinriktning_list: json.dumps([k for k,v in row_item.op_focus.items() if v == True])
 # Q5 - sustainability principles
   - Q5_ansvarighet: row_item.q5_respb_imp_est
@@ -102,9 +102,9 @@ columns:
   - Q11_samutv_intressent: row_item.q11_samutv_est_stakeh
   - Q11_samutv_10: row_item.q11_samutv_est_industry_10
 # Q7/8 - stakeholder assessment
-  - Q8_intressent_vikt: str(row_item.import_stakeholders.true_values()).replace(", and ", ", och ")
+  - Q8_intressent_vikt: str(row_item.import_stakeholders.true_values()).replace(" and ", " och ")
   - Q8_intressent_vikt_list: json.dumps([k for k,v in row_item.import_stakeholders.items() if v == True])
-  - Q8_intressent_vikt_princip: str(row_item.import_stakeholders_ind.true_values()).replace(", and ", ", och ")
+  - Q8_intressent_vikt_princip: str(row_item.import_stakeholders_ind.true_values()).replace(" and ", " och ")
   - Q8_intressent_vikt_princip_list: json.dumps([k for k,v in row_item.import_stakeholders_ind.items() if v == True])
   - Q8_intressent_vikt_ansvarsområde: str(row_item.import_stakeholders_ind_10.true_values()).replace(", and ", ", och ")
   - Q8_intressent_vikt_ansvarsområde_list: json.dumps([k for k,v in row_item.import_stakeholders_ind_10.items() if v == True])
@@ -117,9 +117,9 @@ columns:
   - Q22_org_prio_verkmetod: row_item.q0_prio_good_work_est
   - Q22_org_prio_konsumentfråg: row_item.q0_prio_consum_est
   - Q22_org_prio_samhällutv: row_item.q0_prio_soc_dev_est
-  - Q22_sdg_organisation: str(row_item.q22_sdg_org.true_values()).replace(", and ", ", och ")
+  - Q22_sdg_organisation: str(row_item.q22_sdg_org.true_values()).replace(" and ", " och ")
   - Q22_sdg_organisation_list: json.dumps([k for k,v in row_item.q22_sdg_org.items() if v == True])
-  - Q22_sdg_världen: str(row_item.q22_sdg_world.true_values()).replace(", and ", ", och ")
+  - Q22_sdg_världen: str(row_item.q22_sdg_world.true_values()).replace(" and ", " och ")
   - Q22_sdg_världen_list: json.dumps([k for k,v in row_item.q22_sdg_world.items() if v == True])
 
 ---
